# nous

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  repomix-output.xml  test_delete_api_key.py  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  package.json  pyproject.toml
apps/api/.cursor/rules/: python-commands-uv.mdc
apps/api/app/: main.py
apps/api/app/core/: authentication.py  authorization.py  dependencies.py  middleware.py  schemas.py  security.py  settings.py
apps/api/app/db/postgres/: auth_session.py  graph_connection.py  session.py
apps/api/app/db/qdrant/: __init__.py  connection.py  init_db.py
apps/api/app/features/auth/: __init__.py  models.py  router.py
apps/api/app/features/auth/dtos/: __init__.py  api_keys_dto.py  (+5 more)
apps/api/app/features/graph/: router.py
apps/api/app/features/usage/: __init__.py  context.py  dtos.py  langchain_callback.py  models.py  pricing.py  router.py  tracker.py  usage_repository.py
apps/api/docs/plans/: list_tenants.md
apps/api/migrations/: README  README.md  env.py
apps/api/migrations/versions/: 17010deff34c_fresh_migration_from_models.py  1d937c0e2268_fresh_migration_from_models.py  7c2d7e0f4a1b_add_token_usage_events.py  b1402fea3d29_create_auth_tables.py  b425e9837ea8_initial_migration.py  e0b88fc02f98_add_refresh_tokens_table.py  f123456789ab_add_age_extension.py  f26ec1cce344_add_role_to_user_and_make_tenant_.py
apps/api/scripts/: create_super_admin.py  reset_db.py  setup_postgres_schema.py
apps/api/tests/: README.md  TEST_ISOLATION_SUMMARY.md  conftest.py
apps/api/tests/core/: test_security.py
apps/api/tests/db/postgres/: test_postgres_integration.py
apps/api/tests/features/graph/: test_qdrant_fixtures.py  test_qdrant_fixtures_integration.py
apps/api/tests/features/usage/: test_langchain_callback_unit.py  test_pricing_unit.py  test_usage_e2e_integration.py  test_usage_repository.py  test_usage_repository_integration.py
apps/api/tests/utils/: database.py
(+367 files in other folders)
